force-app/main/default/objects/Account/fields/HMC_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>HMC_Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>