force-app/main/default/objects/Account/fields/HMC_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>HMC_Total_Investment__c</fullName>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>