force-app/main/default/objects/Account/fields/HMC_Training_completed__c.field-meta.xml
<CustomField>
    <fullName>HMC_Training_completed__c</fullName>
    <formula>HMC_Training_start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training completed</label>
    <type>Date</type>
</CustomField>