force-app/main/default/objects/Account/fields/HMC_Training_start_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_Training_start_Date__c</fullName>
    <label>Training start Date</label>
    <type>Date</type>
</CustomField>