force-app/main/default/objects/Account/fields/HMC_Transportations__c.field-meta.xml
<CustomField>
    <fullName>HMC_Transportations__c</fullName>
    <label>transportation</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>