force-app/main/default/objects/Account/fields/HMC_Travelling_expenses_of_salesmen__c.field-meta.xml
<CustomField>
    <fullName>HMC_Travelling_expenses_of_salesmen__c</fullName>
    <label>Travelling expenses of salesmen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>