force-app/main/default/objects/Account/fields/HMC_Value_Turnover__c.field-meta.xml
<CustomField>
    <fullName>HMC_Value_Turnover__c</fullName>
    <label>Value Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>