force-app/main/default/objects/Account/fields/HMC_Warehouse_Cost__c.field-meta.xml
<CustomField>
    <fullName>HMC_Warehouse_Cost__c</fullName>
    <label>Warehouse Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>