force-app/main/default/objects/Account/fields/HMC_Zone__c.field-meta.xml
<CustomField>
    <fullName>HMC_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East  - 1</fullName>
            </value>
            <value>
                <fullName>East - 2</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>