force-app/main/default/objects/Account/fields/insurance_policies_number__c.field-meta.xml
<CustomField>
    <fullName>insurance_policies_number__c</fullName>
    <label>insurance policies number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>