force-app/main/default/objects/Account/fields/Is_loggedIn_User__c.field-meta.xml
<CustomField>
    <fullName>Is_loggedIn_User__c</fullName>
    <formula>IF(Owner.Id = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is loggedIn User?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>