force-app/main/default/objects/Account/fields/NPS_Comments__c.field-meta.xml
<CustomField>
    <fullName>NPS_Comments__c</fullName>
    <label>NPS Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>