force-app/main/default/objects/Account/fields/NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating__c</fullName>
    <label>NPS Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Least</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Highest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>