force-app/main/default/objects/Account/fields/Other_cycles_brand_dealing_details__c.field-meta.xml
<CustomField>
    <fullName>Other_cycles_brand_dealing_details__c</fullName>
    <label>Other cycles brand dealing details</label>
    <type>TextArea</type>
</CustomField>