force-app/main/default/objects/Account/fields/Path_Status__c.field-meta.xml
<CustomField>
    <fullName>Path_Status__c</fullName>
    <defaultValue>&quot;Unqualified&quot;</defaultValue>
    <label>Path Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
                <default>true</default>
                <label>Unqualified</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Dealer Onboarded</fullName>
                <label>Customer Onboarded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>