force-app/main/default/objects/Account/fields/PersonPronouns__c.field-meta.xml
<CustomField>
    <fullName>PersonPronouns__c</fullName>
    <label>PersonPronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
            </value>
            <value>
                <fullName>She/Her</fullName>
            </value>
            <value>
                <fullName>They/Them</fullName>
            </value>
            <value>
                <fullName>He/They</fullName>
            </value>
            <value>
                <fullName>She/They</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>