force-app/main/default/objects/Account/fields/Priority_dealer__c.field-meta.xml
<CustomField>
    <fullName>Priority_dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority dealer</label>
    <type>Checkbox</type>
</CustomField>