force-app/main/default/objects/Account/fields/Product_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold__c</fullName>
    <label>Product Sold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>