force-app/main/default/objects/Account/fields/Product_Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold_By__c</fullName>
    <label>Product Sold By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>