force-app/main/default/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <displayFormat>RN-{00000}</displayFormat>
    <label>Registration Number</label>
    <type>AutoNumber</type>
</CustomField>