force-app/main/default/objects/Account/fields/Remaining_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credit_Limit__c</fullName>
    <label>Remaining Credit Limit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>