force-app/main/default/objects/Account/fields/Security_Certifications_Number__c.field-meta.xml
<CustomField>
    <fullName>Security_Certifications_Number__c</fullName>
    <label>Security Certifications Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>