force-app/main/default/objects/Account/fields/Select_Region__c.field-meta.xml
<CustomField>
    <fullName>Select_Region__c</fullName>
    <label>Select Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region_Picklist</valueSetName>
    </valueSet>
</CustomField>