force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Distance Approval</fullName>
            </value>
            <value>
                <fullName>Document Upload</fullName>
            </value>
            <value>
                <fullName>ROI Calculation</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>Approval In-Progress</fullName>
                <label>Waiting for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>