force-app/main/default/objects/Account/fields/Supplier_diversity_certifications_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_diversity_certifications_Number__c</fullName>
    <description>Supplier diversity certifications</description>
    <label>Supplier diversity certifications Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>