force-app/main/default/objects/Account/fields/Target_amount__c.field-meta.xml
<CustomField>
    <fullName>Target_amount__c</fullName>
    <label>Dealer Target (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>