force-app/main/default/objects/Account/fields/Tax_information_identification_numbers__c.field-meta.xml
<CustomField>
    <fullName>Tax_information_identification_numbers__c</fullName>
    <description>Tax information identification numbers</description>
    <label>Tax information identification numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>