force-app/main/default/objects/Account/fields/Type_x__c.field-meta.xml
<CustomField>
    <fullName>Type_x__c</fullName>
    <description>Text Field created by apex</description>
    <label>Type (apex)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>