force-app/main/default/objects/Account/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <label>Corporate / Institutional</label>
</RecordType>