force-app/main/default/objects/Account/validationRules/FormatValidationForPanCard.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatValidationForPanCard</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  HMC_Pan_Card_Number__c  != Null, NOT( REGEX( HMC_Pan_Card_Number__c , &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;) ))</errorConditionFormula>
    <errorDisplayField>HMC_Pan_Card_Number__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Pan Card Number</errorMessage>
</ValidationRule>