force-app/main/default/objects/Account/validationRules/HMC_Update_Not_Allowed_To_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>HMC_Update_Not_Allowed_To_Others</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
       $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
     NOT( ISNEW() ),
OR(ISCHANGED( BillingAddress ),
ISCHANGED( BillingCity ),
ISCHANGED( BillingCountry ),
ISCHANGED( BillingGeocodeAccuracy ),
ISCHANGED( BillingLatitude ),
ISCHANGED( BillingLongitude ),
ISCHANGED( BillingState ),
ISCHANGED( BillingPostalCode),
ISCHANGED( BillingStreet ),
ISCHANGED( ShippingStreet),
ISCHANGED( ShippingCity),
ISCHANGED( ShippingState),
ISCHANGED( ShippingPostalCode),
ISCHANGED( ShippingCountry),
ISCHANGED( ShippingLatitude),
ISCHANGED( ShippingLongitude),
ISCHANGED( ShippingGeocodeAccuracy),
ISCHANGED( ShippingAddress )
)
)</errorConditionFormula>
    <errorMessage>Only System Administrator Can Update This Field</errorMessage>
</ValidationRule>