force-app/main/default/objects/Account/validationRules/Payment_Status_Verify.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Verify</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    OR (
        ISPICKVAL( HMC_Payment_Status__c , &quot;pending&quot; )
    )
)</errorConditionFormula>
    <errorDisplayField>HMC_Payment_Status__c</errorDisplayField>
    <errorMessage>Please Clear Your Dues Payment</errorMessage>
</ValidationRule>