force-app/main/default/objects/Account/validationRules/ValidateOwnerChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateOwnerChange</fullName>
    <active>false</active>
    <description>Change Owner is available only for NSM</description>
    <errorConditionFormula>$User.ProfileId  &lt;&gt; &quot;00eC30000000843&quot; &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You don&apos;t have the access to change the Owner</errorMessage>
</ValidationRule>