force-app/main/default/objects/Account/validationRules/ValidGSTFormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidGSTFormatValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( HMC_GST_Number__c != null, NOT( REGEX( HMC_GST_Number__c , &quot;^([0][1-9]|[1-4][0-9]|[3][0-7])([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$&quot;)))</errorConditionFormula>
    <errorDisplayField>HMC_GST_Number__c</errorDisplayField>
    <errorMessage>Please Enter Valid GST Number</errorMessage>
</ValidationRule>