force-app/main/default/objects/Account/listViews/Onboarded_Customer_Accounts.listView-meta.xml
<ListView>
    <fullName>Onboarded_Customer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>HMC_Dealer_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Dealer</value>
    </filters>
    <filters>
        <field>Path_Status__c</field>
        <operation>equals</operation>
        <value>Dealer Onboarded</value>
    </filters>
    <label>Onboarded Customer Accounts</label>
</ListView>